# llm-agents-mooc-f24

./: README.md
hackaton/: README.md  pyproject.toml
hackaton/quality_monitoring/: README.md  pyproject.toml  quality_monitoring.rar
hackaton/quality_monitoring/output/: customer_service_feedback.md  customer_service_feedback_01.md
hackaton/quality_monitoring/src/quality_monitoring/: crew.py  main.py
hackaton/quality_monitoring/src/quality_monitoring/config/: agents.yaml  tasks.yaml
lab01_release/: .gitignore  main.py  test.py
lab02_release/: attack-1.txt  attack-2.txt  main.py  prompt-1.txt
lab03_release/: defense.txt
